# rustyweb-official

./: CI_NOTES.md  INSTALL.md  README.md  publish.sh
.github/workflows/: publish.yml
demo/: Cargo.toml  index.html
examples/myapp/src/: main.rs
examples/myapp/templates/: index.html
rust/: Cargo.toml
rust/cli/: Cargo.toml
rust/cli/src/: main.rs
rust/core/: Cargo.toml
rust/core/src/: main.rs
rust/native/: Cargo.toml  package.json
rust/native/src/: lib.rs
rust/templates/: Cargo.toml
rust/templates/templates/: index.html
rust/wasm/: Cargo.toml
rust/wasm/src/: lib.rs
scripts/: build-release.sh
