[package]
name = "rustyweb-core"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["headers", "cookies"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.17"
tower = "0.4"
